dev/matomo/db-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: mariadb
  name: mariadb
  namespace: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - image: bitnami/mariadb:latest
        name: mariadb
        ports:
          - containerPort: 3306
        volumeMounts:
        - name: matomo-disk
          mountPath: /var/lib/mysql
        resources:
          limits:
            memory: "1024Mi"
            cpu: "0.05"
      volumes:
      - name: matomo-disk
