dev/matomo/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: matomo
  name: matomo
  namespace: analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
      - image: index.docker.io/addyvan/matomo:latest
        name: matomo
        ports:
          - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
            cpu: "0.1"
          limits:
            memory: "2048Mi"
            cpu: "0.2"
